# sensitive-desktop

./: .coverage  .env.example  .envtmp  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODE_FORMATTING.md  README.md  docker-compose.yaml  format_all.sh  install_pre_commit.sh  run_tests.py
app/: .coverage  .pre-commit-config.yaml  DEBUG.md  Dockerfile  README.md  __init__.py  app.py  application.py  config.py  conftest.py  connections.html  dockerignore  format_code.sh  pyproject.toml  requirements.txt  routes.py
app/auth/: __init__.py  auth.py  routes.py
app/clients/: __init__.py  auth.py  base.py  connections.py  desktop_configurations.py  factory.py  redis_client.py  storage.py  tokens.py  users.py
app/config/: config.py
app/configurations/: __init__.py  routes.py
app/connections/: __init__.py  routes.py
app/desktop_configurations/: __init__.py  routes.py
app/middleware/: auth.py  security.py
app/scripts/: check_dependencies.sh  check_sass_compiled.py  run_tests.py  sass_watch.py
app/scss/: ACCESSIBILITY-GUIDE.md  README.md  STYLE-UNIFICATION-PLAN.md  main.scss
app/scss/abstracts/: _functions.scss  _mixins.scss  _variables.scss
app/scss/base/: _optimization.scss  _reset.scss  _responsive.scss  _typography.scss
app/scss/components/: _buttons.scss  _cards.scss  _forms.scss  _loaders.scss  _modals.scss  _notifications.scss  _tables.scss
app/scss/layout/: _grid.scss  _navigation.scss  _spacing.scss
app/scss/pages/: _configurations.scss  _connections.scss  _dashboard.scss  _tokens.scss  _users.scss
app/scss/themes/: _default.scss
app/services/auth/: __init__.py  api_routes.py  auth.py  routes.py
app/services/configurations/: __init__.py  api_routes.py  routes.py
app/services/connections/: __init__.py  api_routes.py  routes.py
app/services/storage/: __init__.py  api_routes.py  routes.py
app/services/tokens/: __init__.py  api_routes.py  routes.py
app/services/users/: __init__.py  api_routes.py  routes.py
app/src/: __init__.py
app/src/clients/: auth.py  base.py  connections.py  desktop_configurations.py  storage.py  tokens.py  users.py
app/src/config/: config.py
app/src/middleware/: auth.py  logging.py  security.py
app/src/scripts/: check_sass_compiled.py  sass_watch.py
app/src/scss/: main.scss
app/src/static/: style.css
app/src/templates/: base.html  configurations.html  connections.html  dashboard.html  debug_login.html  login.html  storage_pvcs.html  tokens.html  users.html
app/src/utils/: session.py
app/static/: custom.css  style.css
app/storage/: routes.py
app/templates/: add_configuration.html  add_connection.html  add_user.html  base.html  configuration_detail.html  configuration_form.html  configurations.html  connections.html  dashboard.html  debug_login.html  desktop_configuration_form.html  desktop_configurations.html  edit_configuration.html  login.html  storage_pvcs.html  tokens.html  user_detail.html  users.html
app/templates/errors/: 403.html  404.html  429.html  500.html
app/templates/partials/: form_fields.html  modal_js.html
app/tests/: COVERAGE.md  README.md  config.py  conftest.py
app/tests/functional/: test_api_error_handling.py  test_auth_api_routes.py  test_auth_endpoints.py  test_auth_routes.py  test_auth_service.py  test_configurations_api_routes.py  test_configurations_service.py  test_connections.py  test_connections_api_routes.py  test_connections_service.py  test_routes.py  test_storage_api_routes.py  test_storage_routes.py  test_storage_service.py  test_tokens_api_routes.py  test_tokens_routes.py  test_tokens_service.py  test_users_api_routes.py  test_users_routes.py  test_users_service.py
app/tests/unit/: test_api_connection.py  test_app.py  test_app_entry.py  test_app_init.py  test_auth.py  test_auth_client.py  test_auth_module.py  test_base_client.py  test_config.py  test_connections.py  test_connections_client.py  test_decorators.py  test_desktop_configurations_client.py  test_error_handlers.py  test_middleware.py  test_redis_client.py  test_security.py  test_session.py  test_storage_client.py  test_swagger_utils.py  test_tokens_client.py  test_users.py  test_users_client.py
app/tokens/: routes.py
app/users/: __init__.py  routes.py
app/utils/: decorators.py  security.py  session.py  swagger.py
desktop-manager-api/: .coverage  .pre-commit-config.yaml  Dockerfile  README.md  app.py  auth.py  database.py  dockerignore  format_code.sh  guacamole-init-users.sql  guacamole.py  healthcheck.sh  helm.py  init-postgres.sql  init.sql  migrate.py  models.py  pyproject.toml  rancher.py  requirements.txt  run_tests.sh  utils.py
desktop-manager-api/routes/: auth_routes.py  connection_routes.py  user_routes.py
desktop-manager-api/scripts/: migrate_files.sh
desktop-manager-api/src/: main.py
desktop-manager-api/src/clients/: __init__.py  base.py  factory.py  guacamole.py  rancher.py
desktop-manager-api/src/config/: settings.py
desktop-manager-api/src/core/: auth.py  database.py  exceptions.py  security.py
desktop-manager-api/src/database/: __init__.py
desktop-manager-api/src/desktop_manager/: main.py
desktop-manager-api/src/models/: __init__.py  base.py  storage_pvc.py  token.py
desktop-manager-api/src/routes/: __init__.py  connection_routes.py  desktop_configuration_routes.py  oidc_routes.py  storage_pvc_routes.py  token_routes.py  user_routes.py
desktop-manager-api/src/schemas/: base.py  desktop_configuration.py  storage_pvc.py  token.py  user.py
desktop-manager-api/src/services/: connections.py  desktop_configuration.py  storage_pvc.py  token.py  user.py
desktop-manager-api/src/utils/: encryption.py  error_handlers.py  guacamole_json_auth.py
desktop-manager-api/tests/: README.md  __init__.py  config.py  conftest.py  mocks.py
desktop-manager-api/tests/functional/: conftest.py  test_app_routes.py  test_connection_routes.py  test_desktop_configuration_routes.py  test_direct.py  test_oidc_routes.py  test_routes.py  test_storage_pvc_routes.py  test_token_routes.py  test_user_routes.py
desktop-manager-api/tests/unit/: test_auth.py  test_auth_routes.py  (+47 more)
(+187 files in other folders)
