[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "desktop_frontend"
version = "0.1.0"
description = "Desktop Manager Frontend"
authors = [{name = "Glenn"}]
requires-python = ">=3.11"
dependencies = [
    "flask",
    "flask-cors",
    "flask-session",
    "redis",
    "requests",
    "gunicorn",
    "pydantic",
    "pydantic-settings",
    "python-jose[cryptography]",
    "werkzeug",
    "PyJWT",
    "python-dateutil",
    # Security dependencies
    "argon2-cffi",
    "bleach",
    "flask-limiter",
    "flask-talisman",
    "flask-seasurf",
    "email-validator",
    # API Documentation
    "flasgger"
]

[project.optional-dependencies]

dev = [
    "libsass",
    "debugpy"
]

test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-flask",
    "fakeredis"
]

# NPM script replacement for Python projects
[tool.npm-scripts]
sass-compile = "pysassc app/scss/main.scss app/static/style.css"
sass-watch = "python app/scripts/sass_watch.py"
sass-compressed = "pysassc -t compressed app/scss/main.scss app/static/style.css"
build = "pysassc -t compressed app/scss/main.scss app/static/style.css"

[tool.setuptools]
packages = [
    "clients",
    "config",
    "middleware",
    "utils",
    "services.auth",
    "services.configurations",
    "services.connections",
    "services.storage",
    "services.tokens",
    "services.users",
]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--strict-markers -v"
markers = [
    "unit: mark a test as a unit test",
    "functional: mark a test as a functional test",
    "slow: mark a test as slow",
    "integration: mark a test as requiring integration with backend services"
]

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
# Linting rules configuration
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "C90", # mccabe
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "PT",  # flake8-pytest-style
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "ARG", # flake8-unused-arguments
    "PL",  # pylint
    "UP",  # pyupgrade
    "S",   # flake8-bandit
]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
known-third-party = ["flask", "redis", "pydantic", "requests", "werkzeug"]

[tool.ruff.lint.mccabe]
# Flag overly complex functions with complexity > 10
max-complexity = 10

[tool.ruff.lint.flake8-bugbear]
# Allow default arguments like `dict()` or `list()`
extend-immutable-calls = ["marshmallow.fields.Field"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true
